Project

General

Profile

Actions

Bug #21538

closed

upmap does not respect osd reweights

Added by Theofilos Mouratidis over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
OSDMap
Target version:
-
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

upmap currently ignores reweighted osds. In other words, out osds, or those with some fractional reweight, get items upmapped to them, which is counter productive when trying to balance OSDs.
In particular, out OSDs will continually get PGs upmapped to them since they have 0 PGs by design.

To demonstrate we added a --mark-out option to osdmaptool, add a new upmap-out test, and fix the problem in OSDMap::calc_pg_upmaps.

Bug and fix here: https://github.com/ceph/ceph/pull/17944


Related issues 1 (0 open1 closed)

Copied to Ceph - Backport #21643: luminous: upmap does not respect osd reweightsResolvedShinobu KinjoActions
Actions #1

Updated by Sage Weil over 6 years ago

  • Status changed from New to Pending Backport
Actions #2

Updated by Nathan Cutler over 6 years ago

  • Copied to Backport #21643: luminous: upmap does not respect osd reweights added
Actions #3

Updated by Kefu Chai over 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF